// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode renders 1`] = `
<div
  className="sc-iDJXoU fznKoJ"
  dir="ltr"
>
  <div />
</div>
`;

exports[`AuthCode renders Custom length 1`] = `
<div
  className="sc-iDJXoU fznKoJ"
  dir="ltr"
>
  <div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT drzQbB"
        disabled={false}
      >
        <input
          className="sc-eZceyY doHeXV"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY doHeXV"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY doHeXV"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY doHeXV"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Error state 1`] = `
<div
  className="sc-iDJXoU jYgTfN"
  dir="ltr"
>
  <div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT drzQbB"
        disabled={false}
      >
        <input
          className="sc-eZceyY eNHHez"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY eNHHez"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY eNHHez"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY eNHHez"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY eNHHez"
          dir="ltr"
          disabled={true}
          id="auth-code-part-4"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-eZURND gHVUqq"
    >
      <div
        className="sc-dDPqvT lbBxjT"
        disabled={true}
      >
        <input
          className="sc-eZceyY eNHHez"
          dir="ltr"
          disabled={true}
          id="auth-code-part-5"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-ciFRQG fwcaQl"
      data-testid="undefined-error"
    >
      <p
        className="sc-hYufOg hZFsNh"
        color="chiChi.100"
        size={12}
      >
        Provided value is not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Only digits 1`] = `
<div
  className="sc-iDJXoU fznKoJ"
  dir="ltr"
>
  <div />
</div>
`;
